# pvrr-archive

./: README.md
media-manager/: .gitignore  Cargo.toml
media-manager/crates/site-manager/: Cargo.toml
media-manager/crates/site-manager/src/: lib.rs
media-manager/crates/site-manager/src/html_parser/: field_parser.rs  mod.rs  selector_cache.rs  string_filter.rs
media-manager/crates/site-manager/src/site_category/: category_info.rs  category_map.rs  category_parser.rs  mod.rs
media-manager/crates/site-manager/src/site_info/: mod.rs  site_client.rs
media-manager/crates/site-manager/src/site_torrent/: mod.rs  torrent_info.rs  torrent_list.rs  torrent_parser.rs
media-manager/crates/site-manager/src/tool/: file_size.rs  mod.rs
media-manager/data/: config.yml
media-manager/src/: main.rs  test.rs
pvrr/: .gitignore  Cargo.toml  LICENSE  (+1 more)
pvrr/crates/core/: Cargo.toml
pvrr/crates/core/src/: lib.rs
pvrr/crates/core/src/database/: create_table.rs  mod.rs
pvrr/crates/core/src/entity/: download_client.rs  index_client.rs  mod.rs  system_config.rs
pvrr/crates/core/src/event/: mod.rs
pvrr/crates/core/src/finder/: mod.rs
pvrr/crates/core/src/request/: cookies.rs  mod.rs  request.rs  response.rs
pvrr/crates/core/src/torrent/: bencode.rs  info_hash.rs  magnet.rs  mod.rs
pvrr/crates/core/tests/: bittorrent-v1-test.torrent  torrent.rs
pvrr/crates/indexer/: Cargo.toml
pvrr/crates/indexer/src/: lib.rs  torznab.rs
pvrr_old_0/: .env  .gitignore  Cargo.toml  LICENSE  rustfmt.toml
pvrr_old_0/crates/base_tool/: Cargo.toml
pvrr_old_0/crates/base_tool/src/: datetime.rs  encode.rs  lib.rs  regex.rs  serde.rs  text.rs
pvrr_old_0/crates/database/: Cargo.toml
pvrr_old_0/crates/database/src/: lib.rs
pvrr_old_0/crates/database/src/entity/: downloader_config.rs  match_corrector.rs  mod.rs  searcher_config.rs  system_config.rs
pvrr_old_0/crates/database/src/migrator/: mod.rs  v0001.rs
pvrr_old_0/crates/database/src/table/: downloader_config.rs  match_corrector.rs  mod.rs  searcher_config.rs  system_config.rs
pvrr_old_0/crates/downloader/: Cargo.toml
pvrr_old_0/crates/downloader/src/: lib.rs
pvrr_old_0/crates/downloader/src/aira2/: helper.rs  mod.rs  query_args.rs  resp_body.rs
pvrr_old_0/crates/downloader/src/qbittorrent/: helper.rs  mod.rs  query_args.rs  resp_body.rs
pvrr_old_0/crates/downloader/src/transmission/: helper.rs  mod.rs  query_args.rs  resp_body.rs
pvrr_old_0/crates/film_info/: Cargo.toml
pvrr_old_0/crates/film_info/src/: client.rs  lib.rs
pvrr_old_0/crates/matcher/: Cargo.toml
pvrr_old_0/crates/matcher/src/: custom.rs  elements.rs  lib.rs  matched_item.rs  matched_tag.rs
pvrr_old_0/crates/matcher/src/parser/: episode.rs  keyword.rs  mod.rs  title.rs  tokenize.rs
pvrr_old_0/crates/matcher/src/token/: category.rs  collection.rs  item.rs  mod.rs  wrap.rs
pvrr_old_0/crates/matcher/tests/: parse_test.rs
pvrr_old_0/crates/searcher/: Cargo.toml
pvrr_old_0/crates/searcher/src/: lib.rs
pvrr_old_0/crates/searcher/src/directory/: mod.rs
pvrr_old_0/crates/searcher/src/torznab/: mod.rs  torznab_xml.rs
pvrr_old_0/crates/web_server/: Cargo.toml
pvrr_old_0/crates/web_server/src/: lib.rs
pvrr_old_0/crates/web_server/src/web_api/: json_resp.rs  mod.rs
pvrr_old_0/src/: main.rs
pvrr_old_1/: .gitignore  Cargo.toml  README.md
pvrr_old_1/crates/config/: Cargo.toml
pvrr_old_1/crates/config/src/: lib.rs
pvrr_old_1/crates/http_client/: Cargo.toml
pvrr_old_1/crates/http_client/src/: body_type.rs  lib.rs  query_type.rs  request.rs  response.rs
pvrr_old_1/crates/scrapers/: Cargo.toml
pvrr_old_1/crates/scrapers/src/: css_select.rs  element.rs  json_val.rs  lib.rs  node.rs  quick_xml.rs  selector.rs  tree_sink.rs
pvrr_old_1/crates/torrent/: Cargo.toml
pvrr_old_1/crates/torrent/src/: bencode.rs  builder.rs  file_info.rs  lib.rs
pvrr_old_1/crates/torrent/tests/: torrent_parse_test.rs
pvrr_old_1/module/database/: Cargo.toml
pvrr_old_1/module/database/src/: lib.rs
pvrr_old_1/module/database/src/entity/: downloader_config.rs  mod.rs  searcher_config.rs  system_config.rs
pvrr_old_1/module/database/src/migrator/: v0001.rs
pvrr_old_1/module/downloader/: Cargo.toml
pvrr_old_1/module/downloader/src/: lib.rs
pvrr_old_1/module/downloader/src/aira2/: mod.rs  query_args.rs  resp_body.rs
pvrr_old_1/module/downloader/src/qbittorrent/: helper.rs  mod.rs  query_args.rs  resp_body.rs
pvrr_old_1/module/downloader/src/transmission/: helper.rs  mod.rs  query_args.rs  resp_body.rs
pvrr_old_1/module/matcher/: Cargo.toml
pvrr_old_1/module/matcher/src/: lib.rs
pvrr_old_1/module/matcher/src/name_parse/: helper.rs  mod.rs  title.rs  token_item.rs  token_list.rs  token_text.rs  tokenize.rs
pvrr_old_1/module/pt_client/: Cargo.toml
pvrr_old_1/module/pt_client/src/: lib.rs
pvrr_old_1/module/pt_client/src/client/: client.rs  mod.rs  search.rs  torrents.rs  try_login.rs  user_info.rs
pvrr_old_1/module/pt_client/src/config/: download.rs  login.rs  mod.rs  search.rs  torrents.rs  userinfo.rs
pvrr_old_1/module/pt_client/src/fields/: config_build.rs  field_handle.rs  mod.rs
pvrr_old_1/module/pt_client/src/filter/: cn_duration_parse.rs  en_duration_parse.rs  mod.rs  query_string.rs  replace.rs
pvrr_old_1/module/pt_client/src/values/: config_val.rs  mod.rs  site_type.rs  tera_args.rs  val_args.rs
pvrr_old_1/module/pt_client/tests/: load_test.rs
pvrr_old_1/module/searcher/: Cargo.toml
pvrr_old_1/module/searcher/src/: lib.rs
pvrr_old_1/module/searcher/src/custom/: mod.rs
pvrr_old_1/module/searcher/src/directory/: file_search.rs  mod.rs
pvrr_old_1/module/web_server/: Cargo.toml
pvrr_old_1/module/web_server/src/: lib.rs
pvrr_old_1/src/: main.rs
(+57 files in other folders)
