[package]
name = "media-manager"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "crates/*"]

[dependencies]
#site-manager = { path = "crates/site-manager" }
# web 服务
#axum = { version = "0.6.9", features = ["json", "http2"] }
# 序列化
serde = { version = "1.0", features = ["derive"] }
#serde_json = "1.0.68"
#serde_yaml = "0.9.17"
# 异步
tokio = { version = "1.0", features = ["full"] }
#tracing = "0.1"
#tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# 工具
#dotenv = "0.15.0"
#anyhow = "1.0.66"
#once_cell = "1.17.1"
quick-xml = { version = "0.28", features = ["serialize"] }
