[package]
name = "pvrr"
version = "0.1.0"
edition = "2021"


[workspace]
members = [".", "crates/*"]


[profile.release]
panic = 'abort'


[dependencies]
base_tool = { path = "crates/base_tool" }
database = { path = "crates/database" }
downloader = { path = "crates/downloader" }
matcher = { path = "crates/matcher" }
searcher = { path = "crates/searcher" }
web_server = { path = "crates/web_server" }

log = "0.4"
tokio = { version = "1.27", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }
dotenvy = "0.15"


[dev-dependencies]
tokio-test = "0.4"
