[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1"
anyhow = "1"
bytes = "1"
once_cell = "1"
walkdir = "2"

sha1 = "0.10"
sha256 = "1"
hex = "0.4"

sea-orm = { version = "0.11", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
sea-orm-migration = { version = "0.11", default-features = false }

reqwest = { version = "0.11", features = ["cookies", "json"] }
cookie = "0.16"
cookie_store = "0.16"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
bt_bencode = "0.7"

tokio = { version = "1" }

[dev-dependencies]
tokio-test = "0.4"
