[package]
name = "base_tool"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
base64ct = { version = "1.6", features = ["alloc"] }
bt_bencode = "0.7"
cached = "0.43"
chrono = "0.4"
hex = "0.4"
once_cell = "1.17"
quick-xml = { version = "0.28", features = ["serialize"] }
regex = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha1 = "0.10"
