[package]
name = "database"
version = "1.0.0"
edition = "2021"

[dependencies.sea-orm]
version = "0.11"
features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
]

[dependencies]
base_tool = { path = "../base_tool" }
sea-orm-migration = "0.11"
uuid = { version = "1.3", features = ["v4"] }
serde = "1.0"
log = "0.4"
