[package]
name = "downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
base64ct = { version = "1", features = ["alloc"] }
bt_bencode = "0.7"
database = { path = "../database" }
hex = "0.4"
once_cell = "1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
