[package]
name = "searcher"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4" }
database = { path = "../database" }
log = "0.4"
once_cell = "1"
pt-client = { path = "../pt_client" }
quick-xml = { version = "0.28", features = ["serialize"] }
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
torrent = { path = "../../crates/torrent" }
walkdir = "2"
